# autoprat

./: .envrc  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  Makefile  README.md  actions.go  autoprat  build.rs  cli_parser.go  client.go  config.go  export_test.go  flags.go  flags_test.go  flake.nix  formatters.go  github.go  go.mod  go.sum  help.go  help_test.go  interfaces.go  logs.go  main.go  main_test.go  output.go  output_test.go  parser.go  parser_test.go  query.go  query_test.go  registry.go  registry_test.go  run.go  run_test.go  templates.go  templates_registry_test.go  (+5 more)
.github/workflows/: build.yml  ci.yml  dependabot.yml  deps.yml  lint.yml  release.yml  security.yml
cmd/autoprat/: main.go
embedded/: approve.yaml  ok-to-test.yaml  retest.yaml
github/: client.go  github.go  logs.go  types.go
github/actions/: actions.go  registry.go
github/actions/embedded/: lgtm.yaml
github/filters/: registry.go
github/filters/embedded/: failing-ci.yaml  needs-approve.yaml  needs-lgtm.yaml  needs-ok-to-test.yaml
github/queries/: list-prs.graphql  search-prs.graphql
github/search/: query.go  query_test.go  templates.go  templates_test.go
github/search/templates/embedded/: author.yaml  failing-check.yaml  failing-ci.yaml  needs-approve.yaml  needs-lgtm.yaml
output/templates/: verbose.tmpl
pr/: client.go  github.go  logs.go  types.go
pr/actions/: actions.go
pr/queries/: list-prs.graphql
scripts/: fmt-check.sh  fmt-fix.sh  pre-commit  setup-repo.sh
src/: cli.rs  commands.rs  decision.rs  display.rs  filters.rs  github.rs  graphql.rs  lib.rs  main.rs  pr_selector.rs  query.rs  render.rs  search.rs  shell.rs  types.rs
src/github/: convert.rs  graphql.rs  render.rs  search.rs  search_prs.graphql
templates/: README.md  verbose.tmpl
templates/embedded/: label.yaml  needs-ok-to-test.yaml
testdata/: help_complete.txt
tests/: cli_integration.rs  error_display.rs
