[package]
name = "autoprat"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[[bin]]
name = "autoprat"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.4", features = ["derive"] }
comfy-table = { version = "7.0", default-features = false }
octocrab = "0.44"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shadow-rs = { version = "0.35", default-features = false }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
ureq = { version = "2.9", default-features = false, features = ["tls"] }
url = "2.5"

[build-dependencies]
shadow-rs = "0.35"
