[package]
name = "autoprat"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[[bin]]
name = "autoprat"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
chrono-humanize = "0.2"
clap = { version = "4.4", features = ["derive"] }
octocrab = "0.44"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
terminal_size = "0.4"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
ureq = { version = "2.9", default-features = false, features = ["tls"] }
url = "2.5"

[build-dependencies]
chrono = "0.4"
