[package]
name = "autoprat"
version = "0.1.0"
edition = "2024"
build = "build.rs"
default-run = "autoprat"

[[bin]]
name = "autoprat"
path = "src/bin/autoprat/main.rs"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
chrono-humanize = "0.2"
clap = { version = "4.4", features = ["derive"] }
futures = "0.3"
octocrab = "0.44"
regex = "1.10"
reqwest = { version = "0.11", features = ["stream"] }
reqwest-middleware = "0.2"
reqwest-retry = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
terminal_size = "0.4"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "io-util", "process"] }
tokio-stream = { version = "0.1", features = ["io-util"] }
tokio-util = { version = "0.7", features = ["io"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5"

[build-dependencies]
chrono = "0.4"
